# LearnLanguages

./: .gitignore  CMakeLists.txt  README.md  langues.txt  langues2.txt
learn_languages/: CMakeLists.txt  dataStruct.h  fileParser.cpp  fileParser.h  fileParser2.cpp  fileParser2.h  learn_languages.cpp  learn_languages.h  manager.cpp  manager.h  utils.cpp  utils.h
